--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div class="container">
 
         <div class="image-header">
-            <img src="asset/image/_coding.svg" alt="">
+            <img src="asset/image/coding.svg" alt="">
         </div>
 
         </div>
